# hellocode

./: .gitignore  Makefile  README.md  README_CN.md  ai-coding-assistant-prompt.md  build.bat  build.py  nuitka.cfg  pyproject.toml
.github/workflows/: build.yml
hellocode/: __init__.py  __main__.py  agent.py  agents.py  config.py  knowledge.py  mcp.py  memory.py  plugin.py  provider.py  scheduler.py  storage.py  tui.py  workflow.py
hellocode/gui/: __init__.py  app.py  bookmarks.py  chat_export.py  chat_panel.py  config_dialog.py  file_browser.py  i18n.py  knowledge_panel.py  performance_panel.py  schedule_dialog.py  schedule_log_panel.py  session_panel.py  task_panel.py  terminal_panel.py  themes.py  tool_panel.py  worker.py
hellocode/tools/: __init__.py  base.py  builtin.py
tests/: test_gui_multi.py  test_gui_smoke.py  test_knowledge.py  test_provider.py  test_scheduler.py  test_storage.py  test_tools.py
