[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hellocode"
version = "0.1.0"
description = "Terminal-native AI coding assistant"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "aiofiles>=23.0",
    "pydantic>=2.0",
    "aiohttp>=3.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
hellocode = "hellocode.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
